--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   jpa:
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
